home page added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,55 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <section class="home">
+        <header class="header">
+            <nav class="navbar">
+                <div class="container">
+                    <a href="#home" class="logo"><h1>Pelican.</h1></a>
+                    <ul class="nav-items">
+                        <li>
+                            <a href="#home">Home</a>
+                        </li>
+                        <li>
+                            <a href="#features">Features</a>
+                        </li>
+                        <li>
+                            <a href="#services">Services</a>
+                        </li>
+                        <li>
+                            <a href="#reviews">Reviews</a>
+                        </li>
+                        <li>
+                            <a href="#pricing">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#signup">Signup</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+
+        <div class="banner">
+            <div class="text-content">
+                <h5>Trending News</h5>
+                <h2>Securely manage your Cloud data</h2>
+                <p>Best in class big data software and analytics services will <br>render your chunks into meaningful data.</p>
+                <div class="form">
+                    <form action="." method="get">
+                        <input type="email" class="input-email">
+                        <button type="submit">Get Started</button>
+                    </form>
+                </div>
+                <br>
+                <p>14-day free trial and no credit card required.</p>
+            </div>
+
+            <div class="hero-img">
+                <img src="/assets/hero.png" alt="">
+            </div>
+        </div>
+    </section>
 
     <script src="script.js"></script>
 </body>
