features page added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,53 @@
         </div>
     </section>
 
+    <section class="features">
+        <div class="container">
+
+            <h2 class="features-title">Welcome to Pelican, where data matters.</h2>
+            <p class="features-subtitle">We’ll Deliver the best stories and ideas on the topics you care about most straight to your homepage, app, or inbox.</p>
+            <br> <br>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <img src="assets/icons/p1.png" alt="Fluid Layout icon">
+                    <h3>Fluid Layout</h3>
+                    <p>Deliver the best stories and ideas on the topics you care about most straight to you.</p>
+                </div>
+
+                <div class="grid-item">
+                    <img src="assets/icons/p2.png" alt="Fluid Layout icon">
+                    <h3>Responsive</h3>
+                    <p>Deliver the best stories and ideas on the topics you care about most straight to you.</p>
+                </div>
+
+                <div class="grid-item">
+                    <img src="assets/icons/p3.png" alt="Fluid Layout icon">
+                    <h3>Hyper threading</h3>
+                    <p>Deliver the best stories and ideas on the topics you care about most straight to you.</p>
+                </div>
+
+                <div class="grid-item">
+                    <img src="assets/icons/p4.png" alt="Fluid Layout icon">
+                    <h3>User Friendly</h3>
+                    <p>Deliver the best stories and ideas on the topics you care about most straight to you.</p>
+                </div>
+
+                <div class="grid-item">
+                    <img src="assets/icons/p5.png" alt="Fluid Layout icon">
+                    <h3>AI Algorithms</h3>
+                    <p>Deliver the best stories and ideas on the topics you care about most straight to you.</p>
+                </div>
+
+                <div class="grid-item">
+                    <img src="assets/icons/p6.png" alt="Fluid Layout icon">
+                    <h3>Built-in Camera</h3>
+                    <p>Deliver the best stories and ideas on the topics you care about most straight to you.</p>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
