results section added

--- a/index.html
+++ b/index.html
@@ -196,6 +196,37 @@
         </div>
     </section>
 
+    <section class="results">
+        <span>OUR RESULTS</span>
+        <h6>Outstanding annual results from our awesome Team</h6>
+
+        <div class="grid-results">
+            <div class="item-result">
+                <img src="/assets/icons/i5.png" alt="">
+                <span>47%</span>
+                <p>Higher Profits</p>
+            </div>
+
+            <div class="item-result">
+                <img src="/assets/icons/i3.png" alt="">
+                <span>28%</span>
+                <p>Random Fact</p>
+            </div>
+
+            <div class="item-result">
+                <img src="/assets/icons/i6.png" alt="">
+                <span>88%</span>
+                <p>Satisfied</p>
+            </div>
+
+            <div class="item-result">
+                <img src="/assets/icons/i4.png" alt="">
+                <span>33%</span>
+                <p>Lorem, ipsum.</p>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
