--- a/index.html
+++ b/index.html
@@ -173,58 +173,86 @@
     </section>
 
     <section class="demo">
-        <div class="demo-container">
-          <div class="demo-text">
-            <h6>Pelican Analytics now got the next level</h6>
-            <p>
-              Just get the code and sit tight, you'll witness its power and
-              performance in lead conversion. Powerful and productive
-              technology.
-            </p>
-            <button class="btn">Get Pelican</button>
-          </div>
-
-          <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+      <div class="demo-container">
+        <div class="demo-text">
+          <h6>Pelican Analytics now got the next level</h6>
+          <p>
+            Just get the code and sit tight, you'll witness its power and
+            performance in lead conversion. Powerful and productive technology.
+          </p>
+          <button class="btn">Get Pelican</button>
         </div>
+
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
     </section>
 
     <section class="results">
-        <span>OUR RESULTS</span>
-        <h6>Outstanding annual results from our awesome Team</h6>
+      <span>OUR RESULTS</span>
+      <h6 class="page-title">
+        Outstanding annual results from our awesome Team
+      </h6>
 
-        <div class="grid-results">
-            <div class="item-result">
-                <img src="/assets/icons/i5.png" alt="">
-                <span>47%</span>
-                <p>Higher Profits</p>
-            </div>
-
-            <div class="item-result">
-                <img src="/assets/icons/i3.png" alt="">
-                <span>28%</span>
-                <p>Random Fact</p>
-            </div>
-
-            <div class="item-result">
-                <img src="/assets/icons/i6.png" alt="">
-                <span>88%</span>
-                <p>Satisfied</p>
-            </div>
-
-            <div class="item-result">
-                <img src="/assets/icons/i4.png" alt="">
-                <span>33%</span>
-                <p>Lorem, ipsum.</p>
-            </div>
+      <div class="grid-results">
+        <div class="item-result">
+          <img src="/assets/icons/i5.png" alt="" />
+          <span>47%</span>
+          <p>Higher Profits</p>
         </div>
+
+        <div class="item-result">
+          <img src="/assets/icons/i3.png" alt="" />
+          <span>28%</span>
+          <p>Random Fact</p>
+        </div>
+
+        <div class="item-result">
+          <img src="/assets/icons/i6.png" alt="" />
+          <span>88%</span>
+          <p>Satisfied</p>
+        </div>
+
+        <div class="item-result">
+          <img src="/assets/icons/i4.png" alt="" />
+          <span>33%</span>
+          <p>Lorem, ipsum.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <h6 class="page-title">Served our best for the awesome clients</h6>
+      <p class="sub-title">
+        We have very fair pricing policy that would benefit you and us at the
+        same time. Get the free plan & if you need more - pay.
+      </p>
+
+      <br>
+
+      <div class="review-container">
+        <p>
+          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt in
+          debitis adipisci magnam fugit omnis! Quibusdam sed perspiciatis magnam
+          ab aspernatur aut rerum ipsum consectetur. Reiciendis dolores
+          similique officiis rem."
+        </p>
+
+        <img src="/assets/avatars/review-1.png" alt="">
+
+        <div class="stars">★★★★★</div>
+
+        <h6>Albert Rossi</h6>
+        <p>Software Engineer</p>
+
+      </div>
     </section>
 
     <script src="script.js"></script>
